# dicom-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  build-docker.sh  dicom_extract.py  pyproject.toml  requirements.txt
.github/: copilot_instructions.md
src/dicom_exporter/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
