[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-exporter"
version = "0.1.0"
description = "CLI to extract DICOM images from an exporter DICOM MRI zip file"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydicom>=2.3.0",
    "click>=8.0.0",
]

[project.scripts]
dicom-extract = "dicom_exporter.cli:main"
